# khomdev_web3_auditor

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile.web  README.md  docker-compose.yml  pyproject.toml  run.py
tests/: conftest.py  test_github.py  test_llm_chat.py  test_scanner.py  test_web_routes.py
web/: app.py  session.py
web/static/css/: style.css
web/static/js/modules/: finding-cards.js  finding-detail.js  main.js  report.js  store.js  telemetry.js
web/templates/: index.html
web3_auditor/: __init__.py  cli.py  gui.py
web3_auditor/api/: routes.py  schemas.py
web3_auditor/core/: deps.py  github.py  scanner.py
web3_auditor/db/: database.py  models.py
web3_auditor/engines/: base.py  llm.py
web3_auditor/engines/static/: __init__.py  bandit_runner.py  slither_runner.py
